--- a/index.html
+++ b/index.html
@@ -987,7 +987,13 @@
         <template>
           <div style="background:#fff; border:4px solid #000; padding:1.5rem; max-width:640px;">
             <div style="display:flex; gap:1rem; align-items:flex-start;">
-              <shopify-media max-images="3" width="280" height="280" query="product.media"></shopify-media>
+              <shopify-media
+                max-images="3"
+                width="280"
+                height="280"
+                query="product.selectedOrFirstAvailableVariant.image">
+              </shopify-media>
+
               <div style="flex:1;">
                 <h3 style="font-family:'Bangers', cursive; margin:0; font-size:2em; color:#e74c3c; -webkit-text-stroke:1px #000;">
                   <shopify-data query="product.title"></shopify-data>
