exposed shopify-store component early

--- a/index.html
+++ b/index.html
@@ -578,6 +578,12 @@
     </style>
 </head>
 <body>
+    <shopify-store
+    store-domain="letstryh2.myshopify.com"
+    public-access-token="f275315aab660b8b9bdf0fad52687c2c"
+    country="US"
+    language="en">
+  </shopify-store>
     <!-- Header -->
     <header class="main-header">
         <h1>CHITOWN COMICON 25</h1>
@@ -848,8 +854,7 @@
         <p>&copy; 2025 Metro City Comic Con. All rights reserved. Made with ❤️ for comic fans everywhere!</p>
     </footer>
 
-    <shopify-store store-domain="letstryh2.myshopify.com" public-access-token="f275315aab660b8b9bdf0fad52687c2c" country="US" language="en"></shopify-store>
-
+ 
     <script>
         // Mobile Navigation
         function toggleMobileNav() {
