--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                         </ul>
 
                         <!-- Optional: variant selector, if products have options -->
-                        <!-- <shopify-variant-selector></shopify-variant-selector> -->
+                        <shopify-variant-selector></shopify-variant-selector>
 
                         <!-- Buy Button -->
                         <button
