--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Special+Elite&family=VT323&display=swap" rel="stylesheet">
     <script type="module" src="https://cdn.shopify.com/storefront/web-components.js"></script>
-      <style>
+    <style>
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
         body {
@@ -575,18 +575,19 @@
                 transform: scale(1) rotate(0);
             }
         }
+      .buy-button[disabled],
+      .buy-button:disabled {
+          background: #ccc;
+          cursor: not-allowed;
+          pointer-events: none;
+       }
+
     </style>
 </head>
 <body>
-    <shopify-store
-    store-domain="letstryh2.myshopify.com"
-    public-access-token="f275315aab660b8b9bdf0fad52687c2c"
-    country="US"
-    language="en">
-  </shopify-store>
     <!-- Header -->
     <header class="main-header">
-        <h1>CHITOWN COMICON 25</h1>
+        <h1>Mass COMICON 25</h1>
         <nav class="top-nav">
             <a href="#home" class="nav-btn active">HOME</a>
             <a href="#guests" class="nav-btn">GUESTS</a>
@@ -758,60 +759,48 @@
     </section>
 
     <!-- Tickets Section -->
-    <section id="tickets" class="section">
-        <div class="section-header">
-            <h2 class="section-title">GET YOUR TICKETS</h2>
-            <p class="section-subtitle">Choose your adventure level!</p>
-        </div>
+    <!-- Tickets Section -->
+<section id="tickets" class="section">
+  <div class="section-header">
+    <h2 class="section-title">GET YOUR TICKETS</h2>
+    <p class="section-subtitle">Choose your adventure level!</p>
+  </div>
 
-        <div class="tickets-grid">
-            <!-- Bind to the collection by handle -->
-            <shopify-context type="collection" handle="comicon">
-            <template>
-                <!-- Iterate products in the collection -->
-                <shopify-list-context type="product" query="collection.products" first="12">
-                <template>
-                    <!-- Product form so cart.addLine(event) knows what to add -->
-                    <shopify-product-form>
-                    <template>
-                        <div class="ticket-card" shopify-attr--disabled="!product.availableForSale">
-                        <!-- Ticket Type -->
-                        <h3 class="ticket-type">
-                            <shopify-data query="product.title"></shopify-data>
-                        </h3>
+  <div class="tickets-grid">
+    <shopify-context type="collection" handle="comicon">
+      <template>
+        <shopify-list-context type="product" query="collection.products" first="12">
+          <template>
+            <div class="ticket-card" shopify-attr--disabled="!product.availableForSale">
+              <!-- Ticket Type -->
+              <h3 class="ticket-type">
+                <shopify-data query="product.title"></shopify-data>
+              </h3>
 
-                        <!-- Price -->
-                        <div class="ticket-price">
-                            <shopify-money query="product.selectedOrFirstAvailableVariant.price"></shopify-money>
-                        </div>
+              <!-- Price -->
+              <div class="ticket-price">
+                <shopify-money query="product.selectedOrFirstAvailableVariant.price"></shopify-money>
+              </div>
 
-                        <!-- Features / description -->
-                        <ul class="ticket-features">
-                            <li>
-                            <shopify-data query="product.descriptionPlainSummary"></shopify-data>
-                            </li>
-                        </ul>
+              <!-- Features (optional metafield or description) -->
+              <ul class="ticket-features">
+                <li><shopify-data query="product.description"></shopify-data></li>
+              </ul>
 
-                        <!-- Optional: variant selector, if products have options -->
-                        <shopify-variant-selector></shopify-variant-selector>
-
-                        <!-- Buy Button -->
-                        <button
-                            shopify-attr--disabled="!product.selectedOrFirstAvailableVariant.availableForSale"
-                            class="buy-button"
-                            onclick="if (event.target.hasAttribute('disabled')) return; getElementById('cart').addLine(event).showModal(); createImpact(event, 'SOLD!');"
-                        >
-                            BUY NOW
-                        </button>
-                        </div>
-                    </template>
-                    </shopify-product-form>
-                </template>
-                </shopify-list-context>
-            </template>
-            </shopify-context>
-        </div>
-    </section>
+              <!-- Buy Button -->
+              <button 
+  shopify-attr--disabled="!product.availableForSale"
+  class="buy-button"
+  onclick="if (event.target.hasAttribute('disabled')) return; getElementById('cart').addLine(event).showModal(); createImpact(event, 'SOLD!');">
+  BUY NOW
+</button>
+            </div>
+          </template>
+        </shopify-list-context>
+      </template>
+    </shopify-context>
+  </div>
+</section>
 
     <!-- Location Section -->
     <section id="location" class="section">
@@ -854,7 +843,8 @@
         <p>&copy; 2025 Metro City Comic Con. All rights reserved. Made with ❤️ for comic fans everywhere!</p>
     </footer>
 
- 
+    <shopify-store store-domain="letstryh2.myshopify.com" public-access-token="f275315aab660b8b9bdf0fad52687c2c" country="US" language="en"></shopify-store>
+
     <script>
         // Mobile Navigation
         function toggleMobileNav() {
@@ -1000,7 +990,32 @@
     </script>
 
     <shopify-cart id="cart"></shopify-cart>
-
+    <dialog id="product-modal">
+     <shopify-context type="collection" handle="comicon">
+        <template>
+          <div style="background:#fff; border:4px solid #000; padding:1.5rem; max-width:640px;">
+            <div style="display:flex; gap:1rem; align-items:flex-start;">
+              <shopify-media max-images="3" width="280" height="280" query="product.media"></shopify-media>
+              <div style="flex:1;">
+                <h3 style="font-family:'Bangers', cursive; margin:0; font-size:2em; color:#e74c3c; -webkit-text-stroke:1px #000;">
+                  <shopify-data query="product.title"></shopify-data>
+                </h3>
+                <p style="margin:.5rem 0;"><shopify-money query="product.selectedOrFirstAvailableVariant.price"></shopify-money></p>
+                <shopify-product-form>
+                  <template>
+                    <div>
+                      <shopify-variant-selector></shopify-variant-selector>
+                      <button onclick="getElementById('cart').addLine(event).showModal();" style="margin-top:1rem; padding:12px 20px; font-family:'Bangers', cursive; background:#27ae60; color:#fff; border:3px solid #000;">Add to Cart</button>
+                      <button onclick="getElementById('product-modal').close();" style="margin-left:.5rem; padding:12px 20px; font-family:'Bangers', cursive; background:#e74c3c; color:#fff; border:3px solid #000;">Close</button>
+                    </div>
+                  </template>
+                </shopify-product-form>
+              </div>
+            </div>
+          </div>
+        </template>
+      </shopify-context>
+    </dialog>
 
 </body>
 </html>
