changed the name from Mass to Cosmic

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 <body>
     <!-- Header -->
     <header class="main-header">
-        <h1>Mass COMICON 25</h1>
+        <h1>COSMIC COMICON 25</h1>
         <nav class="top-nav">
             <a href="#home" class="nav-btn active">HOME</a>
             <a href="#guests" class="nav-btn">GUESTS</a>
