UPDATED THE DATES

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metro City Comic Con 2025</title>
+    <title>Metro City Comic Con 2026</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Special+Elite&family=VT323&display=swap" rel="stylesheet">
@@ -715,7 +715,7 @@
 <body>
     <!-- Header -->
     <header class="main-header">
-        <h1>Mass COMICON 25</h1>
+        <h1>COSMIC COMICON 26</h1>
         <nav class="top-nav">
             <a href="#home" class="nav-btn active">HOME</a>
             <a href="#guests" class="nav-btn">GUESTS</a>
@@ -743,7 +743,7 @@
     <section id="home" class="hero-section is-visible">
         <div class="hero-content">
             <h2>UNLEASH YOUR INNER HERO!</h2>
-            <div class="hero-date">OCTOBER 25-27, 2025</div>
+            <div class="hero-date">OCTOBER 25-27, 2026</div>
             <p>The Ultimate Comic Book & Pop Culture Experience</p>
             <a href="#tickets" class="cta-button" onclick="createImpact(event, 'BOOM!')">GET TICKETS NOW!</a>
         </div>
@@ -802,7 +802,7 @@
         
         <div class="schedule-day">
             <div class="schedule-header">
-                <h3>FRIDAY - OCTOBER 25</h3>
+                <h3>FRIDAY - OCTOBER 26</h3>
             </div>
             <div class="schedule-events">
                 <div class="event-item">
@@ -1018,7 +1018,7 @@
                 
                 <p><strong>Hotels:</strong><br>
                 Special rates at nearby hotels!<br>
-                Use code COMIC2025 for discounts</p>
+                Use code COMIC2026 for discounts</p>
             </div>
             <div class="map-placeholder"></div>
         </div>
@@ -1034,7 +1034,7 @@
             <a href="#" class="social-link" onclick="createImpact(event, 'GRAM!')">INSTAGRAM</a>
             <a href="#" class="social-link" onclick="createImpact(event, 'WATCH!')">YOUTUBE</a>
         </div>
-        <p>&copy; 2025 Metro City Comic Con. All rights reserved. Made with ❤️ for comic fans everywhere!</p>
+        <p>&copy; 2026 Metro City Comic Con. All rights reserved. Made with ❤️ for comic fans everywhere!</p>
     </footer>
 
     <shopify-store store-domain="letstryh2.myshopify.com" public-access-token="f275315aab660b8b9bdf0fad52687c2c" country="US" language="en"></shopify-store>
